# acreetionos-backgrounds

./: ChangeLog  PKGBUILD  README.md  gnome-backgrounds.doap  meson.build
acreetionos-backgrounds/: config  packed-refs
acreetionos-backgrounds/objects/pack/: pack-9c787d4faf838d5d2dfbd5861218a956789f5e7d.idx  pack-9c787d4faf838d5d2dfbd5861218a956789f5e7d.rev
backgrounds/: AcreetionOS-GNOME.xml  meson.build
